<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.LoginActivity">




    <ImageView
        android:id="@+id/reg_img"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@mipmap/loginbg"




        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/reg_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="40dp"

        >

        <!--
        <EditText
            android:id="@+id/email_log"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="Email"
            android:background="@drawable/round_register"
            android:paddingStart="20dp"
            android:drawablePadding="10dp"
            android:elevation="3dp"
            android:layout_marginTop="40dp"
            android:textColor="@color/purple_200"
            android:textCursorDrawable="@drawable/curser_color"

            />

        <EditText
            android:id="@+id/password_log"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_register"
            android:drawableTint="@color/purple_200"
            android:drawablePadding="10dp"
            android:elevation="3dp"
            android:hint="Password"
            android:paddingStart="20dp"
            android:inputType="textPassword"

            android:textCursorDrawable="@drawable/curser_color"
            />
-->




        <EditText
            android:id="@+id/email_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:drawableTint="@color/purple_200"
            android:background="@drawable/background_log"
            android:hint="@string/Email"
            android:layout_marginBottom="@dimen/_10sdp"



            />

        <EditText
            android:id="@+id/password_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
            android:drawablePadding="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:drawableTint="@color/purple_200"
            android:background="@drawable/background_log"
            android:hint="@string/password"
            android:layout_marginBottom="@dimen/_10sdp"
            android:inputType="textPassword"



            />




        <Button
            android:id="@+id/login_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Sign in"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_button"
            android:textColor="@color/white"

            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="30dp"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_and_account"
                android:layout_marginEnd="2dp"
                android:textStyle="bold"

                />
            <TextView
                android:id="@+id/signup_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textColor="@color/purple_200"
                android:textStyle="bold"
                />

        </LinearLayout>

    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="70dp"
        android:visibility="gone"
        />





</androidx.constraintlayout.widget.ConstraintLayout>