<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".fragments.CartFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cons_appear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        >




        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:tint = "@color/black"


            />

        <TextView
            android:id="@+id/your_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_cart"
            android:textSize="@dimen/_15ssp"
            android:fontFamily="@font/myfont"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/img_back"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:textStyle="bold"
            />





        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rec_my_cart"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_280sdp"
            app:layout_constraintTop_toBottomOf="@+id/your_cart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:visibility="visible"
            />

        <LinearLayout
            android:id="@+id/linear_details"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/rec_my_cart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            >


            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/rec_my_cary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                >

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cartTotal"
                    android:textSize="@dimen/_12ssp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="@font/myfont"


                    />
                <TextView
                    android:id="@+id/cart_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="$0"
                    android:gravity="end"
                    android:textSize="@dimen/_12ssp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:textStyle="bold"
                    android:textColor="@color/purple_200"
                    android:fontFamily="@font/myfont"


                    />



            </LinearLayout>




            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/rec_my_cary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tax"
                    android:textSize="@dimen/_12ssp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="@font/myfont"


                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="$0"
                    android:gravity="end"
                    android:textSize="@dimen/_12ssp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:textStyle="bold"
                    android:textColor="@color/purple_200"
                    android:fontFamily="@font/myfont"


                    />



            </LinearLayout>



            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/rec_my_cary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delivery_fee"
                    android:textSize="@dimen/_12ssp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="@font/myfont"


                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="$0"
                    android:gravity="end"
                    android:textSize="@dimen/_12ssp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:textStyle="bold"
                    android:textColor="@color/purple_200"
                    android:fontFamily="@font/myfont"


                    />



            </LinearLayout>


        </LinearLayout>


        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#C5C5C5"
            app:layout_constraintTop_toBottomOf="@+id/linear_details"
            android:layout_marginTop="@dimen/_5sdp"

            />

        <LinearLayout
            android:id="@+id/sib"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            >

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub_total"
                android:textSize="@dimen/_12ssp"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/myfont"


                />
            <TextView
                android:id="@+id/sub_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="$0"
                android:gravity="end"
                android:textSize="@dimen/_12ssp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:textStyle="bold"
                android:textColor="@color/purple_200"
                android:fontFamily="@font/myfont"


                />



        </LinearLayout>



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_buy_now"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            app:layout_constraintTop_toBottomOf="@+id/sib"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/background"
            android:text="@string/buy_now"
            android:textColor="@color/white"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/cons_empty"
        android:visibility="visible"

        >



        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/ic_baseline_add_shopping_cart_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/cart_empty"
            app:tint="@color/purple_200"



            />
        <TextView
            android:id="@+id/cart_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_empty"
            app:layout_constraintBottom_toTopOf="@+id/shop_now"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="@dimen/_25ssp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:textColor="@color/purple_200"
            android:fontFamily="@font/myfont"



            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/shop_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_200"
            android:text="@string/shopnow"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_80sdp"
            android:layout_marginStart="@dimen/_80sdp"
            />




    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>