<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.SplashScreenActivity">









    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome To Panda "
        android:textColor="@color/purple_200"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="25dp"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"

        />
    <TextView
        android:id="@+id/expoluar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Explore Us"
        android:textColor="@color/purple_200"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/_18ssp"
        android:fontFamily="@font/myfont"
        />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/img_view"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="28dp"
        app:riv_corner_radius="@dimen/_10sdp"
        android:src="@drawable/img19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"


        app:layout_constraintTop_toBottomOf="@+id/expoluar" />

    <LinearLayout
        android:id="@+id/linear_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/img_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:onClick="login"
            android:layout_marginTop="@dimen/_10sdp"
            >
            <ImageView
                android:id="@+id/img_key"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_baseline_login_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="120dp"
                android:layout_marginTop="@dimen/_10sdp"
                app:tint="@color/purple_200"


                />

            <TextView
                android:id="@+id/txt_key"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/purple_200"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/img_key"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="40dp"


                />





        </androidx.constraintlayout.widget.ConstraintLayout>



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:onClick="register"
            >
            <ImageView
                android:id="@+id/img_register"
                android:layout_width="50dp"
                android:layout_height="50dp"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="120dp"
                android:src="@drawable/ic_baseline_login_24"
                app:tint="@color/purple_200"


                />

            <TextView
                android:id="@+id/txt_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:text="@string/register"
                android:textColor="@color/purple_200"
                android:textSize="30sp"

                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/img_register"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="30dp"

                />





        </androidx.constraintlayout.widget.ConstraintLayout>




    </LinearLayout>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/message_happy"
        app:layout_constraintTop_toBottomOf="@+id/linear_welcome"
        android:textColor="@color/purple_200"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAlignment="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>